# fastapi-streaming

./: README.md  pyproject.toml
app/: main.py
app/routers/: pages.py  streaming.py
static/css/: common.css
static/js/: json-stream.js  llm-stream.js  sse.js
templates/: base.html  json_test.html  llm_test.html  sse_test.html
