[project]
name = "fastapi-streaming"
version = "0.1.0"
description = "FastAPI Streaming demonstration with various streaming techniques"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]
